se prueba nuevamente con docker

--- a/s2i/jenkins-s2i-template.yml
+++ b/s2i/jenkins-s2i-template.yml
@@ -45,8 +45,12 @@ parameters:
   value: "true"
 - description: Name of the ImageStreamTag to be used for the Jenkins image.
   displayName: Jenkins ImageStreamTag
-  name: JENKINS_IMAGE_STREAM_TAG
-  value: "jenkins:latest"
+  name: JENKINS_SOURCE_TAG
+  value: "openshift/jenkins-2-centos7"
+- description: Name of the Type to be used for the Jenkins image.
+  displayName: Jenkins Strategy type
+  name: JENKINS_SOURCE_KIND
+  value: "DockerImage"
 objects:
 - apiVersion: v1
   kind: ServiceAccount
@@ -144,9 +148,8 @@ objects:
     strategy:
       sourceStrategy:
         from:
-          kind: ImageStreamTag
-          name: ${JENKINS_IMAGE_STREAM_TAG}
-          namespace: openshift
+          kind: ${JENKINS_SOURCE_KIND}
+          name: ${JENKINS_SOURCE_TAG}
       type: Source
     triggers:
     - type: ConfigChange
@@ -207,12 +210,4 @@ objects:
         - name: jenkins-data
           emptyDir: {}
     triggers:
-    - type: ConfigChange
-    - imageChangeParams:
-        automatic: true
-        containerNames:
-        - ${JENKINS_SERVICE_NAME}
-        from:
-          kind: ImageStreamTag
-          name: ${JENKINS_IMAGE_STREAM_TAG}
-      type: ImageChange
+    - type: ConfigChange   
