--- a/s2i/jenkins-s2i-template.yml
+++ b/s2i/jenkins-s2i-template.yml
@@ -154,65 +154,77 @@ objects:
       type: ImageChange
   status:
     lastVersion: 0
-- apiVersion: v1
-  kind: DeploymentConfig
-  metadata:
-    labels:
-      app: ${JENKINS_SERVICE_NAME}
-    name: ${JENKINS_SERVICE_NAME}
-  spec:
-    replicas: 1
-    selector:
-      app: ${JENKINS_SERVICE_NAME}
-      deploymentconfig: ${JENKINS_SERVICE_NAME}
-    strategy:
-      type: Recreate
-    template:
-      metadata:
-        labels:
-          app: ${JENKINS_SERVICE_NAME}
-          deploymentconfig: ${JENKINS_SERVICE_NAME}
-      spec:
-        containers:
-        - volumeMounts:
-          - mountPath: /var/lib/jenkins
-            name: jenkins-data
-          env:
-          - name: OPENSHIFT_ENABLE_OAUTH
-            value: ${ENABLE_OAUTH}
-          - name: OPENSHIFT_ENABLE_REDIRECT_PROMPT
-            value: "true"
-          - name: KUBERNETES_MASTER
-            value: "https://kubernetes.default:443"
-          - name: KUBERNETES_TRUST_CERTIFICATES
-            value: "true"
-          - name: JNLP_SERVICE_NAME
-            value: ${JNLP_SERVICE_NAME}
-          image: ${JENKINS_SERVICE_NAME}
-          imagePullPolicy: Always
-          name: ${JENKINS_SERVICE_NAME}
-          resources: {}
-          terminationMessagePath: /dev/termination-log
-        ports:
-          - containerPort: 8080
-            protocol: TCP
-          - containerPort: 50000
-            protocol: TCP
-        dnsPolicy: ClusterFirst
-        restartPolicy: Always
-        securityContext: {}
-        terminationGracePeriodSeconds: 30
-        serviceAccountName: ${JENKINS_SERVICE_NAME}
-        volumes:
-        - name: jenkins-data
-          emptyDir: {}
-    triggers:
-    - type: ConfigChange
-    - imageChangeParams:
-        automatic: true
-        containerNames:
-        - ${JENKINS_SERVICE_NAME}
-        from:
-          kind: ImageStreamTag
-          name: ${JENKINS_IMAGE_STREAM_TAG}
-      type: ImageChange
+apiVersion: v1
+kind: DeploymentConfig
+metadata:
+  creationTimestamp: null
+  generation: 1
+  labels:
+    app: jenkins
+    template: jenkins-master-s2i
+  name: jenkins
+spec:
+  replicas: 1
+  selector:
+    app: jenkins
+    deploymentconfig: jenkins
+  strategy:
+    activeDeadlineSeconds: 21600
+    recreateParams:
+      timeoutSeconds: 600
+    resources: {}
+    type: Recreate
+  template:
+    metadata:
+      creationTimestamp: null
+      labels:
+        app: jenkins
+        deploymentconfig: jenkins
+    spec:
+      containers:
+      - env:
+        - name: OPENSHIFT_ENABLE_OAUTH
+          value: "true"
+        - name: OPENSHIFT_ENABLE_REDIRECT_PROMPT
+          value: "true"
+        - name: KUBERNETES_MASTER
+          value: https://kubernetes.default:443
+        - name: KUBERNETES_TRUST_CERTIFICATES
+          value: "true"
+        - name: JNLP_SERVICE_NAME
+          value: jenkins-jnlp
+        - name: PROXY_PORT
+          value: "8080"
+        - name: PROXY_HOST
+          value: proxypool1.mecon.ar
+        image: ${JENKINS_SERVICE_NAME}                                                                                                                                                            f33ce5601952a01b7cb88f9ea1772be0ddb50582d6e86b68d0426e431
+        imagePullPolicy: Always
+        name: ${JENKINS_SERVICE_NAME}
+        resources: {}
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+        volumeMounts:
+        - mountPath: /var/lib/jenkins
+          name: jenkins-data
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      serviceAccount: ${JENKINS_SERVICE_NAME}
+      serviceAccountName: ${JENKINS_SERVICE_NAME}
+      terminationGracePeriodSeconds: 30
+      volumes:
+      - emptyDir: {}
+        name: jenkins-data
+  test: false
+  triggers:
+  - imageChangeParams:
+      automatic: true
+      containerNames:
+      - jenkins
+      from:
+        kind: ImageStreamTag
+        name: ${JENKINS_IMAGE_STREAM_TAG}
+        namespace: openshift
+    type: ImageChange
+  - type: ConfigChange
